src/components/main/skills/skills.module.scss
@import "../../styles.scss";

.skills-list {
    display: grid;
    place-items: center;
}

.skills-list-item {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2rem 1rem 2rem;
    border-radius: 1rem;
    background-color: #f0f0f0;
    margin: 0.25rem 0;

    @include breakpoint(small) {
        flex-wrap: wrap
    }
}

.skills-list-item:nth-child(even) {
    flex-direction: row-reverse;
    background-color: #dfdfdf;

    p {
        text-align: right;
    }

    .tag-container {
        justify-content: flex-end;
    }

    @include breakpoint(small) {
        background-color: #f0f0f0;
    }
}

.skills-list-item-title {
    width: 300px;
    text-align: center;
    margin-right: 2rem;
    margin-left: 2rem;

    @include breakpoint(small) {
        width: auto
    }
}

.skills-list-item-title {

    img {
        border-radius: 100%;
        background-color: white;
    }

    h4 {
        width: 125px;
        @include breakpoint(small) {
            width: 200px;
        }
    }
}

.skills-list-item-body {
    padding: 0rem 1rem;

    @include breakpoint(small) {
        padding-left: 0;
    }
}

.skills {
    text-align: center;
}

.tag-container {
    display: flex;
    justify-content: left;
    flex-flow: wrap;
    @include breakpoint(small) {
        justify-content: center;
    }
}

.tag {
    padding: 0.25rem 0.5rem;
    border-radius: 1rem;
    color: white;
    background: linear-gradient(45deg, #8d4d93cb, #5e4d93cb);
    transition: 0.25s;
    margin-right: 0.75rem;
    margin-bottom: 0.5rem;

    @include breakpoint(small) {
        justify-content: center;
        margin-right: 0.3rem;
    }
}

.tag:last-child {
    margin-right: 0;
}

.tag:hover {
    cursor: default;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    transition: 0.25s;
}

